# NetworksLab2019

./: .gitignore  CMakeLists.txt  README.md  build_tcp.sh  common.h
Tcp/: pom.xml
electronic_store/server/: CMakeLists.txt  README.md  constants.h  main.c  packet_types.h
electronic_store/server/list_of_clients/: list_of_clients.c  list_of_clients.h
electronic_store/server/list_of_products/: list_of_products.c  list_of_products.h
electronic_store/server/logger/: actions_with_product.h  logger.c  logger.h
electronic_store/server/packet_handler/: acknowledgment_types.h  packet_handler.c  packet_handler.h
electronic_store/server/threads/accepting_thread/: thread.c  thread.h
electronic_store/server/threads/console_listening_thread/: thread.c  thread.h
electronic_store/server/threads/socket_listening_thread/: thread.c  thread.h
indiv/: client.cpp  server.cpp
indiv1/server/: main.c  server
indiv2/client/: client  main.c
indiv_news/: main.c
indiv_store/: main.c
news_system/client/: CMakeLists.txt  README.md  constants.h  main.c
news_system/client/packet_manager/: acknowledgment_types.h  error_types.h  packet_manager.c  packet_manager.h  packet_types.h
news_system/client/user_choice_handler/: functions.c  functions.h
news_system/client/window_manager/: user_choice.h  window_manager.c  window_manager.h
task1/client/: Makefile  client.c  run
task1/server/: Makefile  run  server.c
task2/: CMakeLists.txt
task2/client/: Makefile  client.c
task2/common/: common.c  common.h
task2/server/: Makefile  client.h  clients_handler.c  clients_handler.h  fds_worker.c  fds_worker.h  message.h  printer.c  printer.h  server  server.c  server.h
task3/: .gitignore  build.sbt  scalafmt.conf
task3/dns/: build.gradle  settings.gradle
task3/files/: Bruce_Eckel_Thinking_In_Java_4th_Edition_rus.epub  test.txt  text
task3/tests/: a  a_err  cname  hinfo  mx  ns  test  undefined
tcp/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  build.sh  common.h  header.h  params.h  run.sh  run_client.sh  run_server.sh  server
tcp/1 Индивидуальное/: main.c
tcp/client/: CMakeLists.txt  Client.cpp  MakeCl  MakeClient.txt  clA.c  client.c  client.cpp  constants.h  ind_client.c  main.c  protocol.c  tcp_client.c
tcp/client/main_window/: main_window.c  main_window.h
tcp/client/threads/listening_thread/: thread.c  thread.h
tcp/client/threads/writing_thread/: thread.c  thread.h
tcp/server/: CMakeLists.txt  MakeS  MakeServer.txt  Server.cpp  ind_server.c  io.c  io.h  main.c  protocol.c  protocol.h  reader.c  reader.h  sA.c  server.c  server.cpp  tcp_server.c
tcp/server/linux/: CMakeLists.txt  main.c
tcp/server/linux/message_buffer/: message_buffer.c  message_buffer.h
tcp/server/linux/threads/listening_thread/: thread.c  thread.h
tcp/server/linux/threads/writing_thread/: thread.c  thread.h
tcp/server/linux/user_info_list/: methods.c  user_info_list.h
tcp/server/server/: main.c  server
tcp_non-blocking/server/: CMakeLists.txt  constants.h  main.c
tcp_non-blocking/server/list_of_connections/: functions.c  list_of_connections.h
tcp_non-blocking/server/list_of_users/: functions.c  list_of_users.h
tcp_non-blocking/server/message_receiving_handler/: functions.c  message_receiving_handler.h
tcp_non-blocking/server/message_sending_handler/: functions.c  messages_sending_handler.h
tftp/: errPackages.py  run_client.py  run_server.py  tftp_client.py  tftp_server.py  tftp_test.py
udp/: CMakeLists.txt  file.c  file.h  fsm.c  fsm.h  netudp.c  netudp.h  pom.xml  server_out  test.txt  tftp.c  tftp.h
udp/client/: CMakeLists.txt  client  client.c  client.cpp  client.py  constants.h  main.c  test3.c  udp.c  udp.h  udp_client.c
udp/client/console_handler/: console_handler.h  functions.c  user_choice.h
udp/client/download_file_handler/: download_handler.h  functions.c
udp/client/packet_creator/: functions.c  packet_creator.h  packet_types.h
udp/client/packet_handler/: functions.c  packet_handler.h
udp/client/upload_file_handler/: functions.c  upload_handler.h
udp/server/: CMakeLists.txt  constants.h  main.c  packet_types.h  server  server.c  server.cpp  server.py  test  test2  udp_server.c
udp/server/list_of_clients/: functions.c  list_of_clients.h  user_modes.h
udp/server/logger/: logger.c  logger.h  types.h
udp/server/packet_creator/: functions.c  packet_creator.h
udp/server/packet_handler/: error_codes.h  functions.c  packet_handler.h
udp/src/igorlo/dns/: DnsClient.java  Utilities.java
udp/src/igorlo/dns/message/: Constants.java  DnsAdditionalInfo.java  DnsFlagsClass.java  DnsMessage.java  DnsMessageBuilder.java  DnsMessageClass.java  Request.java  Response.java
udp/src/igorlo/echo/: EchoClient.java  EchoServer.java
udp/src/igorlo/simpledns/: DnsClient.java  DnsServer.java
udp/src/main/code/igorlo/dns/advanced/: Seeker.kt
udp/src/main/code/igorlo/dns/message/: DnsFlagsClass.java  DnsMessage.java  DnsMessageBuilder.java  DnsMessageClass.java  DnsType.kt  Response.java
udp/src/main/code/igorlo/util/: UdpExchange.kt  Utilities.kt
udp/src/main/java/igorlo/dns/: DnsClient.java  DnsClient.kt  Main.kt  Utilities.java
udp/src/main/java/igorlo/dns/advanced/: Main.kt  Seeker.kt  SeekerClient.kt
udp/src/main/java/igorlo/dns/basic/: DnsClient.kt  Main.kt
udp/src/main/java/igorlo/dns/message/: Constants.java  DnsFlags.java  DnsFlagsClass.java  DnsMessage.java  DnsMessageBuilder.java  DnsMessageClass.java  MessageUtils.java  Request.java  Response.java
udp/src/main/java/igorlo/ind1/: Client.kt  Main.kt
udp/src/main/java/igorlo/ind1/NhungBui/: server.c
udp/src/main/java/igorlo/ind2/: Client.kt  Constants.kt  Main.kt  Server.kt  ServerAndClientStarter.kt  ServerLauncher.kt
udp/src/main/java/igorlo/ind2/NhungBui/: client.c
udp/src/main/java/igorlo/ind2/server/: Handlers.kt  Server.kt
udp/src/main/java/igorlo/util/: Exchange.kt  UdpExchange.kt  Utilities.kt
udp/src/test/java/: UtilitiesTest.java
udp/src/test/java/igorlo/dns/message/: MessageUtilsTest.java
udp/test/igorlo/dns/: UtilitiesTest.java
(+145 files in other folders)
